tests/agl/rejections/parse/marker_pos_not_leading.agl
def f(x: int, @pos, y: int) -> int = x
